# github-readme-stats

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  README.md  build.rs  github-readme-stats.toml
.github/workflows/: ci.yml  release.yml
data/: languages.yml  overrides.toml
src/: config.rs  main.rs
src/api/: github.rs  graphql.rs  http.rs  mod.rs  retry.rs
src/api/graphql/: client.rs  mod.rs  models.rs  retry.rs
src/api/queries/: repo.graphql  user.graphql
src/api/rest/: commit_search.rs  language_usage.rs  mod.rs  time_distribution.rs
src/models/: calendar.rs  language.rs  mod.rs  pinned.rs  stats.rs  time_distribution.rs
