[package]
name = "github-readme-stats"
version = "0.1.0"
edition = "2024"
description = "Fetch GitHub user statistics as JSON"
license = "MIT"
repository = "https://github.com/lucifer1004/github-readme-stats"

[[bin]]
name = "github-readme-stats"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
octocrab = "0.49"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
