[package]
name = "github-readme-stats"
version = "0.2.0"
edition = "2024"
description = "Fetch GitHub user statistics as JSON"
license = "MIT"
repository = "https://github.com/lucifer1004/github-readme-stats"
readme = "README.md"
homepage = "https://github.com/lucifer1004/github-readme-stats"
documentation = "https://docs.rs/github-readme-stats"
keywords = ["github", "stats", "cli"]
categories = ["command-line-utilities"]
include = [
  "/Cargo.toml",
  "/Cargo.lock",
  "/README.md",
  "/LICENSE",
  "/build.rs",
  "/src/**",
  "/data/**",
]

[[bin]]
name = "github-readme-stats"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "0.9"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.9"
